Fixed spacing between the logo and the Navigation component in Layout.js

--- a/client/src/assets/styles/LayoutStyle.scss
+++ b/client/src/assets/styles/LayoutStyle.scss
@@ -12,6 +12,10 @@
     margin: 10px 5px;
   }
 
+  .app-tool-bar {
+    justify-content: space-between;
+  }
+
   .layout-container {
     height: 100%;
     display: flex;
